--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
 RewriteEngine On
 
-RewriteCond %{REQUEST_URI} !^/front/
-RewriteRule ^(.*)$ /front/$1 [L,R=301]
+RewriteRule ^front/(.*)$ /errorPage.html [L,NC]
